--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,36 @@
 * {
     font-family: "poppins";
 }
+
+.react-calendar__navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.react-calendar__navigation__prev-button {
+    margin-left: 4rem;
+}
+.react-calendar__navigation__next-button {
+    margin-right: 4rem;
+}
+
+.react-calendar__tile--now {
+    background-color: #ff5252;
+    color: #fff;
+    font-weight: bold;
+}
+
+.react-calendar__tile {
+    margin: 0 0.2rem;
+    width: 0.5rem;
+    height: 2rem;
+    border-radius: 0.3rem;
+    transition: background-color 0.3s ease;
+}
+
+.react-calendar__tile:hover {
+    background-color: #ff5252;
+    color: #fff;
+}
